--- a/index.html
+++ b/index.html
@@ -1,14 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>MEMORY GAME</title>
 </head>
+
 <body>
-    
+    <!-- <div class="container">
+        <header>
+            <h3>Memory Game</h3>
+        </header> -->
+    <section class="game">
+        <div class="card" data-framework='firstimg'>
+            <img class="font-face" src="/img/1.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='firstimg'>
+            <img class="font-face" src="/img/1.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+
+        <div class="card" data-framework='secondimg'>
+            <img class="font-face" src="/img/2.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='secondimg'>
+            <img class="font-face" src="/img/2.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+
+        <div class="card" data-framework='thirdimg'>
+            <img class="font-face" src="/img/3.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='thirdimg'>
+            <img class="font-face" src="/img/3.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='fourthimg'>
+            <img class="font-face" src="/img/4.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='fourthimg'>
+            <img class="font-face" src="/img/4.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+
+        <div class="card" data-framework='fifthimg'>
+            <img class="font-face" src="/img/5.webp" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='fifthimg'>
+            <img class="font-face" src="/img/5.webp" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+
+        <div class="card" data-framework='sixthimg'>
+            <img class="font-face" src="/img/6.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+        <div class="card" data-framework='sixthimg'>
+            <img class="font-face" src="/img/6.jpg" />
+            <img class="back-face" src="/img/הורדה.jpg" />
+        </div>
+    </section>
+    <!-- </div> -->
     <script src="/js/index.js"></script>
 </body>
+
 </html>
