--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 </head>
 
 <body>
-    <!-- <div class="container">
+    <div class="container">
         <header>
-            <h3>Memory Game</h3>
-        </header> -->
+            <h1>Memory Game</h1>
+        </header>
+        <section class="scrore-panel">
+            <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
+            </ul>
+
+            <span class="moves">0</span> Move(s)
+        </section>
     <section class="game">
         <div class="card" data-framework='firstimg'>
             <img class="font-face" src="/img/1.jpg" />
@@ -69,7 +78,7 @@
             <img class="back-face" src="/img/הורדה.jpg" />
         </div>
     </section>
-    <!-- </div> -->
+</div>
     <script src="/js/index.js"></script>
 </body>
 
